crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into pp values (repeat('abcdefghijkl', 100000));"
---
InsertStmt@0..55
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..14
    Ident@12..14 "pp"
  Whitespace@14..15 " "
  SelectStmt@15..52
    Values@15..21 "values"
    Whitespace@21..22 " "
    Ascii40@22..23 "("
    List@23..52
      FuncCall@23..52
        Ident@23..29 "repeat"
        Ascii40@29..30 "("
        AConst@30..44
          Sconst@30..44 "'abcdefghijkl'"
        Ascii44@44..45 ","
        Whitespace@45..46 " "
        AConst@46..52
          Iconst@46..52 "100000"
  Ascii41@52..53 ")"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

