crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select (fn).first, substr((fn).last, 1, 20), length((fn).last) from people;"
---
SelectStmt@0..75
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..17
    AIndirection@7..17
      Ascii40@7..8 "("
      ColumnRef@8..10
        Ident@8..10 "fn"
      Ascii41@10..11 ")"
      Ascii46@11..12 "."
      FirstP@12..17 "first"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..42
    FuncCall@19..42
      Ident@19..25 "substr"
      Ascii40@25..26 "("
      Ascii40@26..27 "("
      AIndirection@27..35
        ColumnRef@27..29
          Ident@27..29 "fn"
        Ascii41@29..30 ")"
        Ascii46@30..31 "."
        LastP@31..35 "last"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..38
        Iconst@37..38 "1"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..42
        Iconst@40..42 "20"
  Ascii41@42..43 ")"
  Ascii44@43..44 ","
  Whitespace@44..45 " "
  ResTarget@45..61
    FuncCall@45..61
      Ident@45..51 "length"
      Ascii40@51..52 "("
      Ascii40@52..53 "("
      AIndirection@53..61
        ColumnRef@53..55
          Ident@53..55 "fn"
        Ascii41@55..56 ")"
        Ascii46@56..57 "."
        LastP@57..61 "last"
  Ascii41@61..62 ")"
  Whitespace@62..63 " "
  From@63..67 "from"
  Whitespace@67..68 " "
  RangeVar@68..74
    Ident@68..74 "people"
  Ascii59@74..75 ";"

