crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ROW(1,2) < ROW(1,1) as false;"
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..35
    AExpr@7..25
      RowExpr@7..14
        Row@7..10 "ROW"
        Ascii40@10..11 "("
        AConst@11..12
          Iconst@11..12 "1"
        Ascii44@12..13 ","
        AConst@13..14
          Iconst@13..14 "2"
      Ascii41@14..15 ")"
      Whitespace@15..16 " "
      Ascii60@16..17 "<"
      Whitespace@17..18 " "
      RowExpr@18..25
        Row@18..21 "ROW"
        Ascii40@21..22 "("
        AConst@22..23
          Iconst@22..23 "1"
        Ascii44@23..24 ","
        AConst@24..25
          Iconst@24..25 "1"
    Ascii41@25..26 ")"
    Whitespace@26..27 " "
    As@27..29 "as"
    Whitespace@29..30 " "
    FalseP@30..35 "false"
  Ascii59@35..36 ";"

