crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ROW(1,2,3) < ROW(1,3,NULL) as true;"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..41
    AExpr@7..32
      RowExpr@7..16
        Row@7..10 "ROW"
        Ascii40@10..11 "("
        AConst@11..12
          Iconst@11..12 "1"
        Ascii44@12..13 ","
        AConst@13..14
          Iconst@13..14 "2"
        Ascii44@14..15 ","
        AConst@15..16
          Iconst@15..16 "3"
      Ascii41@16..17 ")"
      Whitespace@17..18 " "
      Ascii60@18..19 "<"
      Whitespace@19..20 " "
      RowExpr@20..32
        Row@20..23 "ROW"
        Ascii40@23..24 "("
        AConst@24..25
          Iconst@24..25 "1"
        Ascii44@25..26 ","
        AConst@26..27
          Iconst@26..27 "3"
        Ascii44@27..28 ","
        AConst@28..32
          NullP@28..32 "NULL"
    Ascii41@32..33 ")"
    Whitespace@33..34 " "
    As@34..36 "as"
    Whitespace@36..37 " "
    TrueP@37..41 "true"
  Ascii59@41..42 ";"

