crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ROW('ABC','DEF') ~>=~ ROW('DEF','ABC') as false;"
---
SelectStmt@0..55
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..54
    AExpr@7..44
      RowExpr@7..22
        Row@7..10 "ROW"
        Ascii40@10..11 "("
        AConst@11..16
          Sconst@11..16 "'ABC'"
        Ascii44@16..17 ","
        AConst@17..22
          Sconst@17..22 "'DEF'"
      Ascii41@22..23 ")"
      Whitespace@23..24 " "
      Op@24..28 "~>=~"
      Whitespace@28..29 " "
      RowExpr@29..44
        Row@29..32 "ROW"
        Ascii40@32..33 "("
        AConst@33..38
          Sconst@33..38 "'DEF'"
        Ascii44@38..39 ","
        AConst@39..44
          Sconst@39..44 "'ABC'"
    Ascii41@44..45 ")"
    Whitespace@45..46 " "
    As@46..48 "as"
    Whitespace@48..49 " "
    FalseP@49..54 "false"
  Ascii59@54..55 ";"

