crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select ROW('ABC','DEF') ~~ ROW('DEF','ABC') as fail;"
---
SelectStmt@0..52
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    AExpr@7..42
      RowExpr@7..22
        Row@7..10 "ROW"
        Ascii40@10..11 "("
        AConst@11..16
          Sconst@11..16 "'ABC'"
        Ascii44@16..17 ","
        AConst@17..22
          Sconst@17..22 "'DEF'"
      Ascii41@22..23 ")"
      Whitespace@23..24 " "
      Op@24..26 "~~"
      Whitespace@26..27 " "
      RowExpr@27..42
        Row@27..30 "ROW"
        Ascii40@30..31 "("
        AConst@31..36
          Sconst@31..36 "'DEF'"
        Ascii44@36..37 ","
        AConst@37..42
          Sconst@37..42 "'ABC'"
    Ascii41@42..43 ")"
    Whitespace@43..44 " "
    As@44..46 "as"
    Whitespace@46..47 " "
    Ident@47..51 "fail"
  Ascii59@51..52 ";"

