crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row('Joe', 'Blow')::fullname, '(Joe,Blow)'::fullname;"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..35
    TypeCast@7..35
      RowExpr@7..24
        Row@7..10 "row"
        Ascii40@10..11 "("
        AConst@11..16
          Sconst@11..16 "'Joe'"
        Ascii44@16..17 ","
        Whitespace@17..18 " "
        AConst@18..24
          Sconst@18..24 "'Blow'"
      Ascii41@24..25 ")"
      Typecast@25..27 "::"
      TypeName@27..35
        Ident@27..35 "fullname"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ResTarget@37..59
    TypeCast@37..59
      AConst@37..49
        Sconst@37..49 "'(Joe,Blow)'"
      Typecast@49..51 "::"
      TypeName@51..59
        Ident@51..59 "fullname"
  Ascii59@59..60 ";"

